--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,65 +4,65 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: 220, 16%, 96%;
+    --foreground: 222, 20%, 16%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card: 220, 16%, 96%;
+    --card-foreground: 222, 20%, 16%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
+    --popover: 220, 16%, 96%;
+    --popover-foreground: 222, 20%, 16%;
 
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 222, 20%, 70%;
+    --primary-foreground: 220, 16%, 96%;
 
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    --secondary: 215, 14%, 80%;
+    --secondary-foreground: 222, 20%, 16%;
 
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
+    --muted: 215, 14%, 80%;
+    --muted-foreground: 222, 20%, 16%;
 
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: 215, 14%, 80%;
+    --accent-foreground: 222, 20%, 16%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: 0, 80%, 50%;
+    --destructive-foreground: 222, 20%, 16%;
 
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --border: 222, 20%, 70%;
+    --input: 222, 20%, 70%;
+    --ring: 222, 20%, 70%;
 
     --radius: 0.75rem;
   }
 
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: 220, 16%, 16%;
+    --foreground: 222, 20%, 96%;
 
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
+    --muted: 215, 14%, 25%;
+    --muted-foreground: 222, 20%, 96%;
 
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
+    --popover: 220, 16%, 16%;
+    --popover-foreground: 222, 20%, 96%;
 
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --card: 220, 16%, 16%;
+    --card-foreground: 222, 20%, 96%;
 
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
+    --primary: 222, 20%, 65%;
+    --primary-foreground: 220, 16%, 16%;
 
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
+    --secondary: 215, 14%, 25%;
+    --secondary-foreground: 222, 20%, 96%;
 
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 215, 14%, 25%;
+    --accent-foreground: 222, 20%, 96%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: 0, 80%, 50%;
+    --destructive-foreground: 222, 20%, 96%;
 
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --border: 222, 20%, 40%;
+    --input: 222, 20%, 40%;
+    --ring: 222, 20%, 40%;
   }
 }
 
@@ -72,5 +72,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
   }
 }
